--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,5 +50,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
-URL: https://SC-COSMO.github.io/hh-mc-seirv, https://github.com/SC-COSMO/hh-mc-seirv
-BugReports: https://github.com/SC-COSMO/hh-mc-seirv/issues
+URL: https://SC-COSMO.github.io/hhmcseirv, https://github.com/SC-COSMO/hhmcseirv
+BugReports: https://github.com/SC-COSMO/hhmcseirv/issues
